Updated CI/CD to produce a signed APK in addition to an AAB (+ temporarily disabled google play auto upload)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,12 +83,12 @@ jobs:
           tag_name: ${{ env.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload to Google Play
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
-          packageName: org.tfv.deskflow
-          releaseFiles: ${{ steps.sign_aab.outputs.signedReleaseFile }}
-          track: alpha
-          status: completed
+#
+#      - name: Upload to Google Play
+#        uses: r0adkll/upload-google-play@v1
+#        with:
+#          serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT_JSON }}
+#          packageName: org.tfv.deskflow
+#          releaseFiles: ${{ steps.sign_aab.outputs.signedReleaseFile }}
+#          track: alpha
+#          status: completed
