--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"  />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="org.tfv.deskflow.CONNECTION_SERVICE_PERMISSION"/>
 
     <queries>
